worked on the reservation system and payment

--- a/assets/css/less/header-style.less
+++ b/assets/css/less/header-style.less
@@ -77,6 +77,7 @@ header {
     h2 {text-align: center;}
 
     .button {
+      border-radius: 10px;
       text-decoration: none;
       color: #D9E1E8;
       background: #6DAEDF;
