--- a/assets/css/less/reservation-style.less
+++ b/assets/css/less/reservation-style.less
@@ -65,6 +65,7 @@
         cursor: default;
         transition: opacity .35s ease-in-out;
         p {margin: 15px}
+        a {color: #d9e1e8;}
 
         .avatar {
           width: 100px;
@@ -82,7 +83,11 @@
     text-align: left;
     padding: 50px;
 
+    a {color: #d9e1e8;}
+
     #checkout {
+
+      .gone {display: none;}
 
       .field {
         background: rgba(0, 0, 0, 0.0);
@@ -141,11 +146,15 @@
         border: 10px solid white;
         border-radius: 5px;
 
+        p {
+          color: #282c37;
+        }
+
         .button {
-          margin-top: 15px;
+          border-radius: 7px;
           border: 0px solid;
           text-decoration: none;
-          color: #282c37;
+          color: #D9E1E8;
           background: #6DAEDF;
           padding: 20px;
           font-weight: bold;
@@ -155,7 +164,7 @@
           opacity: 0.8;
           transition: opacity .5s ease-in-out, box-shadow .5s ease-in-out, color .5s ease-in-out;
         } .button:hover {
-          color: #D9E1E8;
+          color: #f2f2f2;
           opacity: 1;
         }
       }
