--- a/assets/css/less/user-style.less
+++ b/assets/css/less/user-style.less
@@ -51,7 +51,7 @@
       background: rgba(0, 0, 0, .4);
       opacity: 0;
       transition: opacity .35s ease-in-out;
-      color: #f2f2f2;
+      color: #d9e1e8;
       cursor: pointer;
     }
 
@@ -60,11 +60,12 @@
     }
 
     .submit {
+      border-radius: 7px;
       display: none;
       position: relative;
       top: -80px;
       border: 0px;
-      color: #282c37;
+      color: #D9E1E8;
       background: #6DAEDF;
       padding: 15px;
       width: 85%;
